kubernetes/apps/access-broker/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: access-broker
  labels:
    app.kubernetes.io/name: access-broker
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
