kubernetes/apps/access-broker/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: access-broker
  namespace: access-broker
  labels:
    app.kubernetes.io/name: access-broker
spec:
  selector:
    app.kubernetes.io/name: access-broker
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
