kubernetes/apps/access-broker/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: access-broker-public
  namespace: access-broker
spec:
  parentRefs:
    - name: public
      namespace: gateway
      sectionName: http-gateway
  hostnames:
    - onboard.petebeegle.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /download/
        - path:
            type: Exact
            value: /discord/interactions
      backendRefs:
        - name: access-broker
          port: 80
